// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AfterTitle/> render() should render with different score values 1`] = `
<div
  className="afterTitle"
>
  <StaticField
    label="Created"
  >
    <Connect(DatetimeLabelContainer)
      dateTime={2021-01-31T12:12:00.000Z}
      key="created-at"
    />
  </StaticField>
  <StaticField>
    <ReactStars
      a11y={true}
      activeColor="#FDAB40"
      char="★"
      color="#E8EBEF"
      count={5}
      edit={false}
      emptyIcon={
        <span
          className="material-icons"
        >
          star
        </span>
      }
      filledIcon={
        <span
          className="material-icons"
        >
          star
        </span>
      }
      half={false}
      halfIcon={
        <span
          className="material-icons"
        >
          star_half
        </span>
      }
      isHalf={true}
      onChange={[Function]}
      size={15}
      value={1.5}
    />
  </StaticField>
</div>
`;

exports[`<AfterTitle/> render() should render with different score values 2`] = `
<div
  className="afterTitle"
>
  <StaticField
    label="Created"
  >
    <Connect(DatetimeLabelContainer)
      dateTime={2021-01-31T12:12:00.000Z}
      key="created-at"
    />
  </StaticField>
  <StaticField>
    <ReactStars
      a11y={true}
      activeColor="#FDAB40"
      char="★"
      color="#E8EBEF"
      count={5}
      edit={false}
      emptyIcon={
        <span
          className="material-icons"
        >
          star
        </span>
      }
      filledIcon={
        <span
          className="material-icons"
        >
          star
        </span>
      }
      half={false}
      halfIcon={
        <span
          className="material-icons"
        >
          star_half
        </span>
      }
      isHalf={true}
      onChange={[Function]}
      size={15}
      value={0}
    />
  </StaticField>
</div>
`;

exports[`<AfterTitle/> render() should render with different score values 3`] = `
<div
  className="afterTitle"
>
  <StaticField
    label="Created"
  >
    <Connect(DatetimeLabelContainer)
      dateTime={2021-01-31T12:12:00.000Z}
      key="created-at"
    />
  </StaticField>
  <StaticField>
    <ReactStars
      a11y={true}
      activeColor="#FDAB40"
      char="★"
      color="#E8EBEF"
      count={5}
      edit={false}
      emptyIcon={
        <span
          className="material-icons"
        >
          star
        </span>
      }
      filledIcon={
        <span
          className="material-icons"
        >
          star
        </span>
      }
      half={false}
      halfIcon={
        <span
          className="material-icons"
        >
          star_half
        </span>
      }
      isHalf={true}
      onChange={[Function]}
      size={15}
      value={5}
    />
  </StaticField>
</div>
`;

exports[`<BeforeContent/> render() should render images correctly 1`] = `
<Fragment>
  <div>
    <StaticField>
      Review title
    </StaticField>
    <StaticField
      noBold={true}
    >
      Long review content lorem ipsum dolor sit amen...
    </StaticField>
  </div>
  <StaticField>
    <img
      alt="review 13"
      className="reviewImage"
      key="13"
      src="http://s3.amazonaws.com/yotpo-images-test/Review/29/13/square.jpeg?1457513657"
    />
    <img
      alt="review 14"
      className="reviewImage"
      key="14"
      src="http://s3.amazonaws.com/yotpo-images-test/Review/29/14/square.jpeg?1457513714"
    />
  </StaticField>
  <div>
    <StaticField>
      <span
        className="material-icons reviewFooterThumb"
      >
        thumb_down
         
      </span>
      <b>
        0
      </b>
      <span
        className="material-icons reviewFooterThumb"
      >
        thumb_up
         
      </span>
      <b>
        0
      </b>
    </StaticField>
  </div>
</Fragment>
`;

exports[`<BeforeContent/> render() should render votes down correctly 1`] = `
<Fragment>
  <div>
    <StaticField>
      Review title
    </StaticField>
    <StaticField
      noBold={true}
    >
      Long review content lorem ipsum dolor sit amen...
    </StaticField>
  </div>
  <div>
    <StaticField>
      <span
        className="material-icons reviewFooterThumb"
      >
        thumb_down
         
      </span>
      <b>
        0
      </b>
      <span
        className="material-icons reviewFooterThumb"
      >
        thumb_up
         
      </span>
      <b>
        12
      </b>
    </StaticField>
  </div>
</Fragment>
`;

exports[`<BeforeContent/> render() should render votes up correctly 1`] = `
<Fragment>
  <div>
    <StaticField>
      Review title
    </StaticField>
    <StaticField
      noBold={true}
    >
      Long review content lorem ipsum dolor sit amen...
    </StaticField>
  </div>
  <div>
    <StaticField>
      <span
        className="material-icons reviewFooterThumb"
      >
        thumb_down
         
      </span>
      <b>
        12
      </b>
      <span
        className="material-icons reviewFooterThumb"
      >
        thumb_up
         
      </span>
      <b>
        0
      </b>
    </StaticField>
  </div>
</Fragment>
`;

exports[`<BeforeContent/> render() should render with both votes up and down correctly 1`] = `
<Fragment>
  <div>
    <StaticField>
      Review title
    </StaticField>
    <StaticField
      noBold={true}
    >
      Long review content lorem ipsum dolor sit amen...
    </StaticField>
  </div>
  <div>
    <StaticField>
      <span
        className="material-icons reviewFooterThumb"
      >
        thumb_down
         
      </span>
      <b>
        15
      </b>
      <span
        className="material-icons reviewFooterThumb"
      >
        thumb_up
         
      </span>
      <b>
        12
      </b>
    </StaticField>
  </div>
</Fragment>
`;

exports[`<BeforeContent/> render() should render with no images 1`] = `
<Fragment>
  <div>
    <StaticField>
      Review title
    </StaticField>
    <StaticField
      noBold={true}
    >
      Long review content lorem ipsum dolor sit amen...
    </StaticField>
  </div>
  <div>
    <StaticField>
      <span
        className="material-icons reviewFooterThumb"
      >
        thumb_down
         
      </span>
      <b>
        0
      </b>
      <span
        className="material-icons reviewFooterThumb"
      >
        thumb_up
         
      </span>
      <b>
        0
      </b>
    </StaticField>
  </div>
</Fragment>
`;

exports[`<TitleWrapper/> render() should render both visible and invisible reviews correctly 1`] = `
<a
  className="title"
  href="#"
  target="_self"
>
  <span
    className="material-icons inventory"
  >
    inventory
  </span>
  <span />
</a>
`;

exports[`<TitleWrapper/> render() should render both visible and invisible reviews correctly 2`] = `
<a
  className="title"
  href="#"
  target="_self"
>
  <span
    className="material-icons inventory"
  >
    inventory
  </span>
  <span />
</a>
`;
